--- a/.github/workflows/azure-webapps-python.yml
+++ b/.github/workflows/azure-webapps-python.yml
@@ -1,9 +1,9 @@
-name: Build and deploy Python app to Azure Web App - web-msgposting-app-XYZ
+name: Build and deploy Python app to AWS Elastic Beanstalk
 
 on:
   push:
     branches:
-      - develop
+      - main
   workflow_dispatch:
 
 jobs:
@@ -11,49 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
           python-version: '3.11'
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            . 
-            !venv/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: python-app
-          path: .
-          
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'web-msgposting-app-XYZ'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C8AAE709542A4EEE907ACF195D41E475 }}
+      - name: Deploy to AWS Elastic Beanstalk
+        run: |
+          aws configure set aws_access_key_id ${{ secrets.AKIATKTSM3F6AWWX7AKG }}
+          aws configure set aws_secret_access_key ${{ secrets.XvA7YYMp6AinU+H0kTKs/zZkqVJCQN8CNMj4rgYw }}
+          aws elasticbeanstalk create-application-version --application-name YourApplicationName --version-label $GITHUB_SHA --source-bundle S3Bucket=elasticbeanstalk-source-bucket,S3Key=$GITHUB_SHA
+          aws elasticbeanstalk update-environment --environment-name YourEnvironmentName --version-label $GITHUB_SHA
